Update dropdown icon alignment - Resolve #50

--- a/src/styles/components/_Dropdown.scss
+++ b/src/styles/components/_Dropdown.scss
@@ -18,6 +18,7 @@
     --color: inherit;
     transition: all 0.3s ease;
     display: inline;
+    padding-bottom: 4px;
     & > path {
       --color: inherit;
       background: inherit;
